--- a/Notes App/Base.lproj/Main.storyboard
+++ b/Notes App/Base.lproj/Main.storyboard
@@ -25,6 +25,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="BYZ-38-t0r" id="EXq-Gb-8QX"/>
+                                    </connections>
                                 </searchBar>
                             </tableView>
                         </subviews>
